2010-05-15  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        Add a test to verify that Canvas's toDataURL() is case insensitive wrt the mimeType argument.
        https://bugs.webkit.org/show_bug.cgi?id=39153

        Spec link:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-canvas-todataurl

        * fast/canvas/canvas-toDataURL-case-insensitive-mimetype-expected.txt: Added.
        * fast/canvas/canvas-toDataURL-case-insensitive-mimetype.html: Added.
        * fast/canvas/script-tests/canvas-toDataURL-case-insensitive-mimetype.js: Added.
        (tryMimeType):

2010-05-15  Adam Barth  <abarth@webkit.org>

        Reviewed by David Hyatt.

        Rebaseline client-rects.html on Qt
        https://bugs.webkit.org/show_bug.cgi?id=39169

        * platform/qt/Skipped:
        * platform/qt/fast/multicol/client-rects-expected.txt:

2010-05-14  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=39048
        <rdar://problem/7978384> REGRESSION (r55802): XML errors on Google maps ("Entity 'nbsp' not
        defined") with JavaScript disabled

        * fast/doctypes/xhtml-with-xhtmlmp-doctype-expected.txt: Added.
        * fast/doctypes/xhtml-with-xhtmlmp-doctype.xhtml: Added.

2010-05-15  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Incorrect codegen for slowcase of < in 64-bit
        https://bugs.webkit.org/show_bug.cgi?id=39151

        Add yet more tests for the < operator when comparing integer strings.

        * fast/js/comparison-operators-greater-expected.txt:
        * fast/js/comparison-operators-less-expected.txt:
        * fast/js/script-tests/comparison-operators-greater.js:
        * fast/js/script-tests/comparison-operators-less.js:

2010-05-15  Yael Aharon  <yael.aharon@nokia.com>

        Unreviewed. 

        Update expected results after 59541
