@@ -1,3 +1,14 @@
+2010-05-15  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r59565.
+        http://trac.webkit.org/changeset/59565
+        https://bugs.webkit.org/show_bug.cgi?id=39173
+
+        Broke GTK (Requested by abarth on #webkit).
+
+        * dom/CanvasSurface.cpp:
+        (WebCore::CanvasSurface::toDataURL):
+
 2010-05-15  Andreas Kling  <andreas.kling@nokia.com>
 
         Reviewed by Kenneth Rohde Christiansen.
