@@ -1,3 +1,15 @@
+2010-05-15  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r59565.
+        http://trac.webkit.org/changeset/59565
+        https://bugs.webkit.org/show_bug.cgi?id=39173
+
+        Broke GTK (Requested by abarth on #webkit).
+
+        * fast/canvas/canvas-toDataURL-case-insensitive-mimetype-expected.txt: Removed.
+        * fast/canvas/canvas-toDataURL-case-insensitive-mimetype.html: Removed.
+        * fast/canvas/script-tests/canvas-toDataURL-case-insensitive-mimetype.js: Removed.
+
 2010-05-15  Andreas Kling  <andreas.kling@nokia.com>
 
         Reviewed by Kenneth Rohde Christiansen.
